--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Proxy-Plugin</title>
+	<title>Proxifier</title>
 	<style type="text/css">
 		body {
 			min-width: 250px;
