--- a/popup.html
+++ b/popup.html
@@ -41,7 +41,9 @@
 		<a class="button-link" id="proxy-sys">Set System Proxy</a>
 	</div>
 	<div id="curr-proxy"> < current proxy > </div>
+	<div>
+		<a id="about" href="about.html" target="_blank">About</a>
+	</div>
 </body>
 <script type="text/javascript" src="setproxy.js"></script>
-
 </html>
